--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-This is index.html
+<html>
+    <head>
+        <title>Test page</title>
+    </head>
+    <body></body>
+    <h1>This is the heading</h1>
+    <p>Here goes the <strong>first</strong> paragraph</p>
+    <p>Here goes the <i>second one</i></p>
+    <p>And here, with a break <br>
+    goes the <u>third</u> paragraph</p>
+    <p>BTW, there are two more pages:<a href="page2.html"> Page two</a> and <a href="page3.html">Page three.</a>
+    </p>
+</html>
