Minor updates in files during the class

--- a/cv.html
+++ b/cv.html
@@ -5,10 +5,10 @@
 
     </head>
    
-    <div class="bg"><body></div>
+    <body style="background-color:powderblue;">
     <div class="heading"><h1>Владислав Мозолев</h1></div>
            
-    <img src="C:\Users\mozol\projects\site1\Ovotarochka.png" alt="photo of me" width="360" height="300">
+    <div class="pic"><img src="C:\Users\mozol\projects\site1\Ovotarochka.png" alt="photo of me" width="360" height="300"></div>
 
     <div class="personal"><p><b>Личные данные:<br></b>
         Дата рождения: 26.03.1997<br>
