--- a/index.html
+++ b/index.html
@@ -10,4 +10,10 @@
     goes the <u>third</u> paragraph</p>
     <p>BTW, there are two more pages:<a href="page2.html"> Page two</a> and <a href="page3.html">Page three.</a>
     </p>
+    <p>Shla sasha po&nbsp;shosse</p><!--неразрывный пробел-->
+    <p>I sosala sushku &copy;</p><!--копирайт-->
+    <p>&quot;Vladimirsky central&quot;</p><!--кавычки-->
+    <p>&laquo;Veter severny&raquo;</p><!--закрываемые кавычки-->
+    <p>3&lt;5 and 5&gt;3</p><!--больше/меньше-->
+    <p>lol &prime; kek</p><!--апостроф-->
 </html>
